--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <title>HTML + CSS</title>
+
+    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+
+  <body>
+    <header class="header">
+      <h1>Student Bio</h1>
+    </header>
+
+    <div class="container">
+      <section class="main-bio" id="main-bio">
+        <!-- TODO: Replace content with your own info -->
+        <h2>Clayton Hooppaw</h2>
+
+        <img
+          id="bio-image"
+          src="https://via.placeholder.com/200"
+          alt="Your Name"
+        />
+
+        <p>
+          Write a short paragraph or two about yourself, or use placeholder text
+          from <a href="http://www.lipsum.com/">www.lipsum.com</a>
+        </p>
+      </section>
+
+      <section id="contact-info">
+        <h2>Contact Info</h2>
+        <ul>
+          <li><strong>Email:</strong> <a href="mailto:Hooppaw1@gmail.com">Hooppaw1@gmail.com</a></li>
+          <li><strong>Github:</strong> <a href="https://github.com/TonofClay93/TonofClay93/tree/main">My Github Page</li>
+          <li><strong>LinkedIn:</strong> <a href="#placeholder">coming soon</a></li>
+        </ul>
+      </section>
+    </div>
+  </body>
+</html>
+
